--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
-      "webpack-env"
+      "webpack-env",
+      // https://element-plus.org/zh-CN/guide/quickstart.html#volar-%E6%94%AF%E6%8C%81
+      "element-plus/global"
     ],
     "paths": {
       "@/*": [
